# BlueBoat-SideScanSonar

./: .gitignore  requirements.txt  terminals.txt
blueboat_control/: CMakeLists.txt  package.xml
blueboat_control/launch/: SSS_launch.py
blueboat_control/src/: master_control.py  simulation_interface.py
blueboat_control/src/MPC/: ur_mpc_control.py  uvr_mpc.py  uvr_mpc_control.py
blueboat_control/src/SSS/: README.md  SSS_guide.md  processed_sss_listener.py  sss_node.py  sss_processor_node.py
blueboat_control/src/_custom_libraries/: custom_functions.py  path_generation.py  processed_sss_printer.py  sss_processing.py  svlog.py  svlog_to_rosbag.py
blueboat_control/src/robot_interaction/: SSS_guide.md  param_set.py  robot_interface.py  sss_node.py  uwgps_log.py
blueboat_interfaces/: CMakeLists.txt
blueboat_interfaces/msg/: OmniscanProfile.msg  ProcessedSSSPing.msg
