<?xml version="1.0"?>
<package format="3">
  <name>blueboat_control</name>
  <version>0.1.0</version>
  <description>The blueboat_control package</description>

  <maintainer email="yannick.noe@enib.fr">Yannick NOE</maintainer>

  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>blueboat_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>